# poly-kalshi-arb

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/arbitrage/: __init__.py  calculator.py  fee_calculator.py
src/clients/: kalshi_client.py  polymarket_client.py
src/display/: __init__.py  console.py
src/matching/: __init__.py  fuzzy_matcher.py
src/models/: __init__.py  arbitrage.py  market.py  orderbook.py
